--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   animated_text_kit: ^4.2.2
+  awesome_snackbar_content: ^0.1.3
+  modal_progress_hud_nsn: ^0.4.0
+  firebase_core: ^2.16.0
+  cloud_firestore: ^4.9.2
+  firebase_auth: ^4.10.0
 
 dev_dependencies:
   flutter_test:
