--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   firebase_core: ^2.16.0
   cloud_firestore: ^4.9.2
   firebase_auth: ^4.10.0
+  camera: ^0.10.5+4
+  path_provider: ^2.1.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
