--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   camera: ^0.10.5+4
   path_provider: ^2.1.1
   path: ^1.8.3
+  contained_tab_bar_view: ^0.8.0
 
 dev_dependencies:
   flutter_test:
